deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitbranchstatecache
  labels:
    app.kubernetes.io/name: gitbranchstatecache
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitbranchstatecache
  ports:
    - name: http
      port: 80
      targetPort: http
